dark mode + fix css issue with close box on map

--- a/acarshub-typescript/src/css/modules/_colors.scss
+++ b/acarshub-typescript/src/css/modules/_colors.scss
@@ -1,3 +1,5 @@
+// Light Mode
+
 $blue-highlight: hsl(193, 81%, 41%);
 $body-bg: hsl(0, 0%, 96%);
 $grey-bg: hsl(0, 0%, 24%);
@@ -24,3 +26,13 @@ $egg-white: hsl(0, 0%, 80%);
 $tabs-grey-shadow: hsl(0, 0%, 58%);
 $jbox-shadow: hsla(0, 0%, 0%, 0.25);
 $mapbackground: hsl(0, 0%, 60%);
+$text-color: hsl(210, 11%, 15%);
+$pre: hsl(0, 0%, 96%);
+$pre-border: hsl(0, 0%, 80%);
+$pre-color: hsl(0, 0%, 20%);
+
+// Dark Mode
+
+$body-bg-dark: hsl(0, 0%, 15%);
+$pre-dark: hsl(0, 0%, 24%);
+$pre-border-dark: hsl(0, 0%, 12%);
